# clyde

./: .gitmodules  5-DAYS-ROADMAP.md  Cargo.toml  Main.wpas  ROADMAP.md  TODO.txt  ast.txt  bootstrap.c  compiler-controlflow  main.cly  rule110.cly  rule110.wpas  symbols.txt  test.cly
.cargo/: config.toml
clyde_macros/: Cargo.toml
clyde_macros/src/: codegen.rs  lib.rs
crates/clyde_macros/: Cargo.toml
crates/clyde_macros/src/: codegen.rs  lib.rs
crates/inkwell/: Cargo.toml
crates/inkwell/src/: lib.rs  module.rs  targets.rs
crates/inkwell/src/support/: mod.rs
crates/inkwell/src/types/: float_type.rs  int_type.rs
crates/inkwell/src/values/: mod.rs
crates/llvm-sys.rs/: Cargo.toml  build.rs
crates/llvm-sys.rs/src/: lib.rs
docs/: reference.md
src/: ast.rs  ast_analysis.rs  clyde.lalrpop  codegen.rs  context.rs  diagnostics.rs  files.rs  inline_slice.rs  interface.rs  intermediate.rs  layout.rs  lexer.rs  main.rs  mapping.rs  monomorphization.rs  mut_visitor.rs  node_visitor.rs  parser.rs  pretty_print.rs  queries.rs  resolve.rs  session.rs  string_internals.rs  symbol.rs  target.rs  type_ir.rs  typecheck.rs  types.rs  wpascal.lalrpop
src/analysis/: intermediate.rs  mod.rs  node_visitor.rs  resolve.rs  typecheck.rs
src/syntax/: ast.rs  lexer.rs  parser.rs  symbol.rs
