workspace = { members = ["clyde_macros"] }
[package]
name = "clyde"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clydec"
path = "src/main.rs"

[dependencies]
bumpalo = "3.15.3"
indexmap = "2.2.3"
getopts = "0.2"
bitflags = "2.5.0"
index_vec = "0.1.3"
ahash = "0.8.11"
num-traits = "0.2.19"
hashbrown = "0.15.0"
clyde_macros = { path = "./clyde_macros" }
phf = { version = "0.11.2", features = ["macros"] }
tinyvec = "1.8.0"

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.37", features = ["mm"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_System_Memory_NonVolatile"] }
