[workspace]
resolver = "2"
members = [
    "crates/clyde_macros"
]

[package]
name = "clyde"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clydec"
path = "src/main.rs"

[dependencies]
bumpalo = "3.15.3"
indexmap = "2.2.3"
getopts = "0.2"
bitflags = "2.5.0"
index_vec = "0.1.3"
foldhash = "0.1.5"
num-traits = "0.2.19"
hashbrown = { version = "0.15.2", features = ["nightly"] }
clyde_macros = { path = "crates/clyde_macros" }
phf = { version = "0.11.2", features = ["macros"] }
inkwell = { path = "crates/inkwell", version = "0.6.0", default-features = false, features = ["llvm18-1", "target-x86"] }
tinyvec = "1.8.0"
bytemuck = { version = "1.22.0", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.37", features = ["mm"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_System_Memory_NonVolatile"] }
