[package]
name = "inkwell"
version = "0.6.0"
authors = ["Daniel Kolsoi <thadan64@gmail.com>"]
description = "Inkwell aims to help you pen your own programming languages by safely wrapping llvm-sys."
documentation = "https://thedan64.github.io/inkwell/"
repository = "https://github.com/TheDan64/inkwell"
readme = "README.md"
keywords = ["llvm", "safe", "wrapper"]
license = "Apache-2.0"
categories = ["development-tools::ffi"]
edition = "2021"

[features]
default = ["target-all"]
typed-pointers = []
# clydec-fix: feature to opt out of jit-related llvm functionallity, which would
# cause link errors due to component selection in llvm-sys.rs/build.rs
execution-engine = []

# Please update internal_macros::FEATURE_VERSIONS when adding a new LLVM version
llvm8-0 = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm9-0 = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm10-0 = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm11-0 = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm12-0 = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm13-0 = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm14-0 = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm15-0 = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm16-0 = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm17-0 = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm18-1 = ["llvm-sys-181"]

# Don't link against LLVM libraries. This is useful if another dependency is
# installing LLVM. See llvm-sys for more details. We can't enable a single
# `no-llvm-linking` feature across the board of llvm versions, as it'll cause
# cargo to try and download and compile them all. See
# https://github.com/rust-lang/cargo/issues/3494
llvm8-0-no-llvm-linking = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm9-0-no-llvm-linking = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm10-0-no-llvm-linking = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm11-0-no-llvm-linking = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm12-0-no-llvm-linking = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm13-0-no-llvm-linking = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm14-0-no-llvm-linking = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm15-0-no-llvm-linking = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm16-0-no-llvm-linking = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm17-0-no-llvm-linking = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm18-1-no-llvm-linking = ["llvm18-1", "llvm-sys-181/no-llvm-linking"]

# Linking preference.
# If none of these are enabled, it defaults to force static linking.
#
# Force dynamic linking against LLVM libraries. See llvm-sys for more details
llvm12-0-force-dynamic = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm13-0-force-dynamic = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm14-0-force-dynamic = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm15-0-force-dynamic = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm16-0-force-dynamic = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm17-0-force-dynamic = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm18-1-force-dynamic = ["llvm18-1", "llvm-sys-181/force-dynamic"]

# Prefer dynamic linking against LLVM libraries. See llvm-sys for more details
llvm12-0-prefer-dynamic = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm13-0-prefer-dynamic = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm14-0-prefer-dynamic = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm15-0-prefer-dynamic = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm16-0-prefer-dynamic = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm17-0-prefer-dynamic = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm18-1-prefer-dynamic = ["llvm18-1", "llvm-sys-181/prefer-dynamic"]

# Force static linking against LLVM libraries. See llvm-sys for more details
llvm12-0-force-static = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm13-0-force-static = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm14-0-force-static = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm15-0-force-static = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm16-0-force-static = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm17-0-force-static = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm18-1-force-static = ["llvm18-1", "llvm-sys-181/force-static"]

# Prefer static linking against LLVM libraries. See llvm-sys for more details
llvm12-0-prefer-static = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm13-0-prefer-static = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm14-0-prefer-static = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm15-0-prefer-static = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm16-0-prefer-static = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm17-0-prefer-static = [] # clydec-fix: link against one static llvm-version: 18.1.8
llvm18-1-prefer-static = ["llvm18-1", "llvm-sys-181/prefer-static"]

# Don't force linking to libffi on non-windows platforms. Without this feature
# inkwell always links to libffi on non-windows platforms.
no-libffi-linking = []
target-x86 = []
target-arm = []
target-mips = []
target-aarch64 = []
target-amdgpu = []
target-systemz = []
target-hexagon = []
target-nvptx = []
target-msp430 = []
target-xcore = []
target-powerpc = []
target-sparc = []
target-bpf = []
target-lanai = []
target-webassembly = []
target-riscv = []
target-loongarch = []
target-syncvm = []
target-all = [
    "target-x86",
    "target-arm",
    "target-mips",
    "target-aarch64",
    "target-amdgpu",
    "target-systemz",
    "target-hexagon",
    "target-nvptx",
    "target-msp430",
    "target-xcore",
    "target-powerpc",
    "target-sparc",
    "target-bpf",
    "target-lanai",
    "target-webassembly",
    "target-riscv",
    "target-loongarch",
]
experimental = ["static-alloc"]
nightly = ["inkwell_internals/nightly"]

[dependencies]
inkwell_internals = { path = "./internal_macros", version = "0.11.0" }

llvm-sys-181 = { path = "../llvm-sys.rs/", package = "llvm-sys", version = "181.2.0", optional = true, features = ["disable-alltargets-init"] }

either = "1.5"
libc = "0.2"
once_cell = "1.16"
thiserror = "2.0.11"

static-alloc = { version = "0.2", optional = true }
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
regex = "1"

[badges]
codecov = { repository = "TheDan64/inkwell" }
